--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+  <title>TKD45</title>
+
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
@@ -26,7 +27,7 @@
               <a href="#instructors" class="nav-link scroller js-scroll">Наши инструкторы</a>
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link scroller js-scroll">История таеквон-до</a>
+              <a href="#" class="nav-link scroller js-scroll">История тхэквондо</a>
             </li>
             <li class="nav-item">
               <a href="#partners" class="nav-link scroller js-scroll">Партнеры</a>
@@ -377,7 +378,7 @@
             <p>
               <strong>Наш Вконтакте:</strong> <a href="https://vk.com/tkdmft45" class="footer-link"> vk.com/tkdmft45</a> <br>
               <strong>Наш Инстаграм:</strong> <a href="https://www.instagram.com/tkdmft45/" class="footer-link">instagram.com/tkdmft45</a> <br>
-              <strong>Наши Одноклассники:</strong> Loremipsumdolorsitamet.ru <br>
+              <strong>Наши Одноклассники:</strong> <a href="https://www.instagram.com/tkdmft45/" class="footer-link">instagram.com/tkdmft45</a> <br>
             </p>
           </div>
         </div>
