--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <section id="hero" class="d-flex align-items-center justify-content-center">
     <div class="container">
-      <div class="pic"><img src="./img/kbi-logo.jpg" alt="kbi-logo" class="logo"></div>
+      <div class="pic"><img class="logo" src="./img/kbi-logo.jpg" alt="kbi-logo" ></div>
       <h1 class="name">Федерация тхэквондо Курганской области</h1>
       <h2 class="subname">ТХЭКВОНДО МФТ — ВЫБОР СИЛЬНЫХ!</h2>
     </div>
@@ -250,8 +250,8 @@
 
 
 <section class="about2 mb-5">
-    <div class="container">
-      <img src="./img/ITF-logo.png" alt="itf">
+    <div class="container container2">
+      <img class="itf-logo" src="./img/ITF-logo.png" alt="itf">
     </div>
 </section>
 
