--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
   <section id="hero" class="d-flex align-items-center justify-content-center">
     <div class="container">
-      <div class="pic"><img class="logo" src="./img/kbi-logo.jpg" alt="kbi-logo" ></div>
+      <div class="pic"><img class="logo" src="./img/Logo_MFT_futbolka_1.png" alt="kbi-logo" ></div>
       <h1 class="name">Федерация тхэквондо Курганской области</h1>
       <h2 class="subname">ТХЭКВОНДО МФТ — ВЫБОР СИЛЬНЫХ!</h2>
     </div>
@@ -58,7 +58,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 order-1 order-lg-2">
-          <img class="img-fluid" src="https://sun9-55.userapi.com/impf/x9AGhvbt7x0MQEz2dGZEByiVxo18v0DjnwEdyA/8RncoSDbxQE.jpg?size=0x0&quality=90&proxy=1&sign=26889ff59299f9a351e0790c44f4ebf1" alt="pic">
+          <img class="img-thumbnail" src="./img/Trainers.jpg" alt="pic">
         </div>
         <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-1 content">
           <h3>Добро пожаловать в команду чемпионов!</h3>
@@ -192,58 +192,65 @@
   <h3 class="text-center">Наши Инструкторы</h3>
   <p>С нами работают только профессионалы!</p>
 
-  <div class="carousel slide" id="InstructCarousel" data-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-target="#InstructCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#InstructCarousel" data-slide-to="1"></li>
-    </ol>
-    <div class="container carousel-inner">
-      <div class="carousel-item active">
-        <div class="row">
+  <div class="container">
 
-          <div class="col-lg-6 col-sm-12">
-              <div class="card">
-                <img src="./img/EP.jpg" class="card-img-top" alt="Egor Kritinin">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
-          </div>
-
-          <div class="col-lg-6 col-sm-12">
-              <div class="card">
-                <img src="./img/EP.jpg" class="card-img-top" alt="Egor Kritinin">
-                <div class="card-body">
-                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                </div>
-              </div>
+    <div class="row">
+      <div class="col-sm">
+        <div class="card">
+          <img src="./img/Kim2.jpg" class="card-img-top" alt="Egor Kritinin">
+          <div class="card-body">
+            <p class="card-text">Ким Валентин Петрович <br>
+              Черный пояс, III дан</p>
           </div>
         </div>
       </div>
 
-      <div class="carousel-item">
-          <div class="row ">
-
-            <div class="col-lg-6 ">
-                <div class="card" >
-                  <img src="./img/EP.jpg" class="card-img-top" alt="Egor Kritinin">
-                  <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  </div>
-                </div>
+        <div class="col-sm">
+          <div class="card">
+            <img src="./img/Natalia_Alexandrovna.jpg" class="card-img-top" alt="Egor Kritinin">
+            <div class="card-body">
+              <p class="card-text">Кретинина Наталья Александровна <br>
+                Тренер дошкольных групп</p>
             </div>
-
-            <div class="col-lg-6 ">
-                <div class="card " >
-                  <img src="./img/EP.jpg" class="card-img-top" alt="Egor Kritinin">
-                  <div class="card-body">
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                  </div>
-                </div>
-            </div>
-
           </div>
         </div>
+
+        <div class="col-sm">
+                <div class="card">
+                        <img src="./img/Shalonko.jpg" class="card-img-top" alt="Egor Kritinin">
+                        <div class="card-body">
+                          <p class="card-text">Шалонько Екатерина Андреевна</p>
+                        </div>
+                      </div>
+        </div>
+    </div>
+      
+    <div class="row">
+      <div class="col-sm">
+        <div class="card">
+          <img src="./img/Ponomareva.jpg" class="card-img-top" alt="Egor Kritinin">
+          <div class="card-body">
+            <p class="card-text">Пономарева Екатерина Сергеевна</p>
+          </div>
+        </div>
+      </div>
+
+        <div class="col-sm">
+                <div class="card">
+                        <img src="./img/Lokinih.jpg" class="card-img-top" alt="Egor Kritinin">
+                        <div class="card-body">
+                          <p class="card-text">Лукиных Станислав Валерьевич</p>
+                        </div>
+                      </div>
+        </div>
+        <div class="col-sm">
+                <div class="card">
+                        <img src="./img/Guselnikov.jpg" class="card-img-top" alt="Egor Kritinin">
+                        <div class="card-body">
+                          <p class="card-text">Гусельников Максим Вадимович</p>
+                        </div>
+                      </div>
+        </dv>
     </div>
   </div>
 </section>
@@ -362,7 +369,7 @@
         <div class="col-lg-6">
           <div class="footer-info">
             <div class="pic">
-              <img class="logo" src="./img/kbi-logo.jpg" alt="logo">
+              <img class="logo" src="./img/Logo_MFT_futbolka_1.png" alt="logo">
             </div>
             <p>
               <strong>Адрес:</strong> улица Алексеева, 14 , Курган <br>
