--- a/index.html
+++ b/index.html
@@ -4,7 +4,30 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
   <title>TKD45</title>
+
+  <meta name="description" content="Тхэквондо в Курганской области">
+  <meta name="keywords" content="тхэквондо, тхэквондо курган, таеквондо курган, федерация тхэквондо, МФТ, курганская область, спорт, спорт курган">
+  <meta http-equiv="" content="">
+
+  <meta property="og:locale" content="ru_RU">
+  <meta property="og:title" content="Федерация тхэквондо Курганской области">
+  <meta property="og:description" content="ТХЭКВОНДО МФТ — ВЫБОР СИЛЬНЫХ!">
+  <meta property="og:image" content="./img/Logo_MFT_futbolka_1.png">
+  <meta property="og:site_name" content="Федерация тхэквондо Курганской области">
+
+
+  <!--FAV-ICON-->
+  <link rel="apple-touch-icon" sizes="180x180" href="img/favico/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favico/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favico/favicon-16x16.png">
+  <link rel="manifest" href="img/favico/site.webmanifest">
+  <link rel="mask-icon" href="img/favico/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="img/favico/favicon.ico">
+  <meta name="msapplication-TileColor" content="#2b5797">
+  <meta name="msapplication-config" content="img/favico/browserconfig.xml">
+  <meta name="theme-color" content="#ffffff">
 
   <!-- CSS only -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css" integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -46,7 +69,7 @@
   </header>
 
 
-  <section id="hero" class="d-flex align-items-center justify-content-center">
+  <div id="hero" class="d-flex align-items-center justify-content-center">
     <div class="container">
 
       <div class="pic">
@@ -58,7 +81,7 @@
       <h1 class="name">Федерация тхэквондо Курганской области</h1>
       <h2 class="subname">ТХЭКВОНДО МФТ — ВЫБОР СИЛЬНЫХ!</h2>
     </div>
-  </section>
+  </div>
 
   <section class="about my-5" id="about">
     <div class="container">
@@ -315,7 +338,7 @@
               <div class="card-body">
                 <p class="card-text"><strong>Кретинин Егор Петрович</strong><br>
                   <i>Руководитель федерации, <br> 
-                    международный инструктор, черный пояс V дан, мастер спорта РФ, судья международной категории "А"</i></p>
+                    международный инструктор, черный пояс V дан, мастер спорта РФ, судья международной категории "А"</i> <br></p>
               </div>
             </div>
           </div>
@@ -329,7 +352,7 @@
           <img src="./img/Kim2.jpg" class="card-img-top" alt="coach">
           <div class="card-body">
             <p class="card-text"><strong>Ким Валентин Петрович </strong><br>
-              <i>Черный пояс, III дан</i></p>
+              <i>Черный пояс, III дан</i><br></p>
           </div>
         </div>
       </div>
@@ -339,7 +362,7 @@
             <img src="./img/Natalia_Alexandrovna.jpg" class="card-img-top" alt="coach">
             <div class="card-body">
               <p class="card-text"><strong>Кретинина Наталья Александровна</strong> <br>
-              <i>Тренер дошкольных групп по ОФП с элементами тхэквондо</i></p>
+              <i>Тренер дошкольных групп по ОФП с элементами тхэквондо</i><br></p>
             </div>
           </div>
         </div>
@@ -348,7 +371,8 @@
                 <div class="card">
                         <img src="./img/Shalonko.jpg" class="card-img-top" alt="coach">
                         <div class="card-body">
-                          <p class="card-text"><strong>Шалонько Екатерина Андреевна </strong><br> <br> </p>
+                          <p class="card-text"><strong>Шалонько Екатерина Андреевна </strong><br>
+                            <i></i> <br> </p>
                         </div>
                       </div>
         </div>
@@ -360,7 +384,7 @@
           <img src="./img/Ponomareva.jpg" class="card-img-top" alt="coach">
           <div class="card-body">
             <p class="card-text"><strong>Пономарева Екатерина Сергеевна</strong> <br> 
-              <i>Тренер дошкольных групп по ОФП с элементами тхэквондо</i></p>
+              <i>Тренер дошкольных групп по ОФП с элементами тхэквондо</i><br></p>
           </div>
         </div>
       </div>
@@ -369,7 +393,8 @@
                 <div class="card">
                         <img src="./img/Lokinih.jpg" class="card-img-top" alt="coach">
                         <div class="card-body">
-                          <p class="card-text"><strong>Лукиных Станислав Валерьевич</strong> <br> <br></p>
+                          <p class="card-text"><strong>Лукиных Станислав Валерьевич</strong> <br> 
+                            <i></i><br></p>
                         </div>
                       </div>
         </div>
@@ -377,7 +402,8 @@
                 <div class="card">
                         <img src="./img/Guselnikov.jpg" class="card-img-top" alt="coach">
                         <div class="card-body">
-                          <p class="card-text"><strong>Гусельников Максим Вадимович</strong> <br> <br></p>
+                          <p class="card-text"><strong>Гусельников Максим Вадимович</strong> <br> 
+                            <i></i><br></p>
                         </div>
                       </div>
         </div>
@@ -433,7 +459,7 @@
             </div>
             <p>
               <strong>Адрес:</strong> улица Алексеева, 14 , Курган <br>
-              <strong>Запись по телефону:</strong> 83522229227, 8958689227 <br>
+              <strong>Запись по телефону:</strong> 8 (3522) 229 227, 8 965 868 9227 <br>
               <strong>Эл. почта:</strong> tkdmft45@inbox.ru <br>
             </p>
           </div>
