--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:locale" content="ru_RU">
   <meta property="og:title" content="Федерация тхэквондо Курганской области">
   <meta property="og:description" content="ТХЭКВОНДО МФТ — ВЫБОР СИЛЬНЫХ!">
-  <meta property="og:image" content="./img/Logo_MFT_futbolka_1.png">
+  <meta property="og:image" content="img/Logo_MFT_futbolka_1.png">
   <meta property="og:site_name" content="Федерация тхэквондо Курганской области">
 
 
